Minor changes in screen handling
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@830 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/source/org.openwms.client.flex.wrapper/pom.xml
+++ b/org.openwms/trunk/source/org.openwms.client.flex.wrapper/pom.xml
@@ -87,7 +87,7 @@
                     <templateOutputDirectory>${project.build.directory}/templates</templateOutputDirectory>
                     <parameters>
                         <swf>${packed.app}</swf>
-                        <title>OpenWMS</title>
+                        <title>openwms.org</title>
                         <width>100%</width>
                         <height>100%</height>
                     </parameters>
