--- a/org.openwms/trunk/source/org.openwms.client.flex.wrapper/src/main/webapp/WEB-INF/web.xml
+++ b/org.openwms/trunk/source/org.openwms.client.flex.wrapper/src/main/webapp/WEB-INF/web.xml
@@ -24,7 +24,7 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee"
 	xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 	id="WebApp_ID" version="2.5">
-	<display-name>OpenWMS</display-name>
+	<display-name>openwms.org</display-name>
 	<context-param>
 		<param-name>contextClass</param-name>
 		<param-value>com.springsource.server.web.dm.ServerOsgiBundleXmlWebApplicationContext</param-value>
