Modifications on security
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@840 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/source/org.openwms.client.flex.app/pom.xml
+++ b/org.openwms/trunk/source/org.openwms.client.flex.app/pom.xml
@@ -62,6 +62,9 @@
 						<duplicateArgumentNames>false</duplicateArgumentNames>
 					</warnings>
 					<allowSourcePathOverlap>true</allowSourcePathOverlap>
+                    <keepAs3Metadatas>
+                        <param>Protected</param>
+                    </keepAs3Metadatas>
 					<output>${project.build.directory}/${project.artifactId}.swf</output>
 				</configuration>
 				<dependencies>
@@ -201,6 +204,13 @@
 			<version>2.2.1</version>
 			<type>swc</type>
 		</dependency>
+        <!-- Flex Security -->
+        <dependency>
+            <groupId>com.gorillalogic</groupId>
+            <artifactId>chimp</artifactId>
+            <version>0.2</version>
+            <type>swc</type>
+        </dependency>
 
 		<dependency>
 			<groupId>org.graniteds</groupId>
