Added some security stuff. Use ehcache to cache user objects between client requests.
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@847 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/source/org.openwms.common.service.spring/pom.xml
+++ b/org.openwms/trunk/source/org.openwms.common.service.spring/pom.xml
@@ -64,6 +64,25 @@
             <type>libd</type>
             <scope>provided</scope>
         </dependency>
+        <!-- Spring Security -->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>org.springframework.security.core</artifactId>
+            <version>3.0.0.RELEASE</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>org.springframework.security.web</artifactId>
+            <version>3.0.0.RELEASE</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>org.springframework.security.config</artifactId>
+            <version>3.0.0.RELEASE</version>
+            <scope>provided</scope>
+        </dependency>
 
         <!-- JEE API -->
         <dependency>
@@ -92,6 +111,12 @@
             <artifactId>org.aspectj-library</artifactId>
             <type>libd</type>
             <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>net.sourceforge.ehcache</groupId>
+            <artifactId>com.springsource.net.sf.ehcache</artifactId>
+            <version>1.6.2</version>
         </dependency>
 
         <!-- Project dependencies -->
