--- a/org.openwms/trunk/source/pom.xml
+++ b/org.openwms/trunk/source/pom.xml
@@ -170,10 +170,10 @@
             <id>all</id>
             <modules>
                 <module>org.openwms.common.domain</module>
+                <module>org.openwms.common.domain.as</module>
                 <module>org.openwms.common.infrastructure.configuration</module>
                 <module>org.openwms.common.infrastructure.hsql</module>
                 <module>org.openwms.common.infrastructure.postgres</module>
-                <module>org.openwms.common.domain.as</module>
                 <module>org.openwms.common.framework.test</module>
                 <module>org.openwms.common.integration</module>
                 <module>org.openwms.common.integration.eclipselink</module>
@@ -181,9 +181,21 @@
                 <module>org.openwms.common.integration.jpa</module>
                 <module>org.openwms.common.service.api</module>
                 <module>org.openwms.common.service.spring</module>
+                <module>org.openwms.common.flex.module</module>
+
+                <module>org.openwms.tms.domain</module>
+                <module>org.openwms.tms.domain.as</module>
+                <module>org.openwms.tms.integration</module>
+                <module>org.openwms.tms.integration.jpa</module>
+                <module>org.openwms.tms.service.api</module>
+                <module>org.openwms.tms.service.spring</module>
+                <module>org.openwms.tms.flex.module</module>
+
+                <module>org.openwms.client.flex.lib</module>
                 <module>org.openwms.client.flex.app</module>
                 <module>org.openwms.client.flex.wrapper</module>
-                <module>org.openwms.tms.domain</module>
+
+                <module>org.openwms.app</module>
                 <module>org.openwms.app.plan</module>
             </modules>
         </profile>
