Added some security stuff
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@858 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/source/org.openwms.common.infrastructure.configuration/src/org.openwms.infrastructure.configuration.properties
+++ b/org.openwms/trunk/source/org.openwms.common.infrastructure.configuration/src/org.openwms.infrastructure.configuration.properties
@@ -28,3 +28,7 @@ jdbc.database=POSTGRESQL
 jdbc.properties=hibernate.connection.compatible=7.1
 #jdbc.dialect=org.hibernate.dialect.HSQLDialect
 jdbc.persistenceUnit=OpenWMS-test-durable
+
+# System user credentials
+system.user=openwms
+system.password=openwms
