--- a/org.openwms/trunk/source/org.openwms.client.flex.lib/pom.xml
+++ b/org.openwms/trunk/source/org.openwms.client.flex.lib/pom.xml
@@ -62,6 +62,23 @@
 						<duplicateArgumentNames>false</duplicateArgumentNames>
 					</warnings>
 					<allowSourcePathOverlap>true</allowSourcePathOverlap>
+                    <keepAs3Metadatas>
+                        <keepAs3Metadata>Protected</keepAs3Metadata>
+                        <keepAs3Metadata>Bindable</keepAs3Metadata>
+                        <keepAs3Metadata>Managed</keepAs3Metadata>
+                        <keepAs3Metadata>ChangeEvent</keepAs3Metadata>
+                        <keepAs3Metadata>NonCommittingChangeEvent</keepAs3Metadata>
+                        <keepAs3Metadata>Transient</keepAs3Metadata>
+                        <keepAs3Metadata>Id</keepAs3Metadata>
+                        <keepAs3Metadata>Version</keepAs3Metadata>
+                        <keepAs3Metadata>Name</keepAs3Metadata>
+                        <keepAs3Metadata>In</keepAs3Metadata>
+                        <keepAs3Metadata>Inject</keepAs3Metadata>
+                        <keepAs3Metadata>Out</keepAs3Metadata>
+                        <keepAs3Metadata>Observer</keepAs3Metadata>
+                        <keepAs3Metadata>ManagedEvent</keepAs3Metadata>
+                        <keepAs3Metadata>Destroy</keepAs3Metadata>
+                    </keepAs3Metadatas>
 					<output>${project.build.directory}/${project.artifactId}.swc</output>
 				</configuration>
 				<dependencies>
@@ -110,7 +127,7 @@
 	<repositories>
 		<repository>
 			<id>sonatype-public</id>
-			<url>http://repository.sonatype.org/content/groups/public</url>
+			<url>http://repository.sonatype.org/content/groups/forge</url>
 			<releases>
 				<enabled>true</enabled>
 			</releases>
@@ -152,7 +169,7 @@
 	<pluginRepositories>
 		<pluginRepository>
 			<id>sonatype-public</id>
-			<url>http://repository.sonatype.org/content/groups/public</url>
+			<url>http://repository.sonatype.org/content/groups/forge</url>
 			<releases>
 				<enabled>true</enabled>
 			</releases>
