Moved model of common project to lib project
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@892 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/source/org.openwms.common.flex.module/pom.xml
+++ b/org.openwms/trunk/source/org.openwms.common.flex.module/pom.xml
@@ -164,6 +164,12 @@
             <version>${project.version}</version>
             <type>swc</type>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>org.openwms.common.flex.lib</artifactId>
+            <version>${project.version}</version>
+            <type>swc</type>
+        </dependency>
         
 		<dependency>
 			<groupId>com.adobe.flex.framework</groupId>
