Added imaged to subproject, removed cairngorm from project, worked on transportorder view
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@897 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/source/org.openwms.tms.flex.module/pom.xml
+++ b/org.openwms/trunk/source/org.openwms.tms.flex.module/pom.xml
@@ -62,6 +62,23 @@
 						<duplicateArgumentNames>false</duplicateArgumentNames>
 					</warnings>
 					<allowSourcePathOverlap>true</allowSourcePathOverlap>
+                    <keepAs3Metadatas>
+                        <keepAs3Metadata>Protected</keepAs3Metadata>
+                        <keepAs3Metadata>Bindable</keepAs3Metadata>
+                        <keepAs3Metadata>Managed</keepAs3Metadata>
+                        <keepAs3Metadata>ChangeEvent</keepAs3Metadata>
+                        <keepAs3Metadata>NonCommittingChangeEvent</keepAs3Metadata>
+                        <keepAs3Metadata>Transient</keepAs3Metadata>
+                        <keepAs3Metadata>Id</keepAs3Metadata>
+                        <keepAs3Metadata>Version</keepAs3Metadata>
+                        <keepAs3Metadata>Name</keepAs3Metadata>
+                        <keepAs3Metadata>In</keepAs3Metadata>
+                        <keepAs3Metadata>Inject</keepAs3Metadata>
+                        <keepAs3Metadata>Out</keepAs3Metadata>
+                        <keepAs3Metadata>Observer</keepAs3Metadata>
+                        <keepAs3Metadata>ManagedEvent</keepAs3Metadata>
+                        <keepAs3Metadata>Destroy</keepAs3Metadata>
+                    </keepAs3Metadatas>
 					<output>${project.build.directory}/${project.artifactId}.swf</output>
 				</configuration>
 				<dependencies>
@@ -127,16 +144,6 @@
 				<enabled>true</enabled>
 			</snapshots>
 		</repository>
-		<repository>
-			<id>cairngorm-repo</id>
-			<url>http://maven.ow2.org/maven2/</url>
-			<releases>
-				<enabled>true</enabled>
-			</releases>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-		</repository>
 	</repositories>
 	<pluginRepositories>
 		<pluginRepository>
@@ -189,13 +196,7 @@
 			<version>${flex.version}</version>
 			<type>pom</type>
 		</dependency>
-		<dependency>
-			<groupId>com.adobe.cairngorm</groupId>
-			<artifactId>cairngorm-bin</artifactId>
-			<version>2.2.1</version>
-			<type>swc</type>
-		</dependency>
-
+        
 		<dependency>
 			<groupId>org.graniteds</groupId>
 			<artifactId>granite-core-swc</artifactId>
