Minor changes, added libs folder due to FB compiler reasons
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@904 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/source/org.openwms.common.domain.as/pom.xml
+++ b/org.openwms/trunk/source/org.openwms.common.domain.as/pom.xml
@@ -117,6 +117,25 @@
 					</sourcePaths>
 				</configuration>
 			</plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>copy-dependencies</id>
+                        <phase>process-resources</phase>
+                        <goals>
+                            <goal>copy-dependencies</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>libs</outputDirectory>
+                            <overWriteIfNewer>true</overWriteIfNewer>
+                            <includeGroupIds></includeGroupIds>
+                            <excludeGroupIds>com.adobe.flex.framework</excludeGroupIds>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
 		</plugins>
 	</build>
 
