--- a/org.openwms/trunk/source/org.openwms.common.service.spring/pom.xml
+++ b/org.openwms/trunk/source/org.openwms.common.service.spring/pom.xml
@@ -96,6 +96,10 @@
             <groupId>javax.persistence</groupId>
             <artifactId>com.springsource.javax.persistence</artifactId>
         </dependency>
+        <dependency>
+            <groupId>javax.transaction</groupId>
+            <artifactId>com.springsource.javax.transaction</artifactId>
+        </dependency>
         
         <!-- Test database driver -->
         <dependency>
